[package]
name = "nue_web"
version = "0.1.0"
edition = "2024"

[dependencies]
# We need extras for serde
nue_model = { path = "../model", features = ["extras"] }
nue_storage = { path = "../storage", features = ["sqlite"] }

feather = {version = "~0.8", default-features = false}
# do we use bytes? or serde_json?
postcard = { version = "1.1.3", features = ["alloc"] }
